--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <!-- #contact -->   	
 	<div class="container-fluid" id="contact">
 				<div class="row-fluid" style="margin-top:30px;text-align:center;">
-			<a href="apply.html#" class="btn btn-xlarge btn-success">Apply Now</a>
+			<a href="apply.html#" class="btn btn-xlarge btn-primary">Apply Now</a>
 		</div>
 
 	<div class="container dark span">
