--- a/index.html
+++ b/index.html
@@ -32,10 +32,6 @@
 	  	padding-top: 5px;
 	  }
 
-	  #team
-	  {
-	  	background: #9a2749;
-	  }
   </style>
 </head>
 <body>
@@ -225,7 +221,7 @@
 				  </div>
 				  <div class="control-group">
 				    <div class="controls">
-				      <button type="submit" class="btn btn-purple">Contact Us</button>
+				      <button type="submit" class="btn btn-primary">Contact Us</button>
 				    </div>
 				  </div>
 			</form>
