--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
 	
       <!-- #contact -->   	
 	<div class="container-fluid" id="contact">
-				<div class="row-fluid" style="margin-top:30px;text-align:center;">
+		<div class="row-fluid dark" style="margin-top:30px;text-align:center;">
 			<a href="apply.html#" class="btn btn-xlarge btn-primary">Apply Now</a>
+			<h1>Get in contact with us</h1>	
 		</div>
 
 	<div class="container dark span">
-		<h1>Get in contact with us</h1>	
 		<div class="span4">			
 			<form>
 				  <div class="control-group">
@@ -243,7 +243,12 @@
 				  <strong>Full Name</strong><br>
 				  <a href="mailto:#">first.last@example.com</a>
 				</address>		
-		</div>		
+		</div>	
+		<div class="span4 pull-right">
+			<a class="twitter-timeline" href="https://twitter.com/StarFarmVenture" data-widget-id="323038649002369025">Tweets by @StarFarmVenture</a>
+			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		</div>
+
 	</div>
 </div>   <!-- End Contact -->  
 	</div>
