--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 			<h1>Get in contact with us</h1>	
 		</div>
 
-	<div class="container dark span">
+	<div class="container dark span12">
 		<div class="span4">			
 			<form>
 				  <div class="control-group">
@@ -266,7 +266,7 @@ $(function () {
     // scroll nav
     $('.scroller').click(function(){
     	var section = $($(this).data("section"));
-    	var top = section.offset().top-82;
+    	var top = section.offset().top-77;
         $("html, body").animate({ scrollTop: top }, 700);
         return false;
     });
