--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           	<a class="brand scroller" data-section="html" href="/"><img src="logo-6.png"></img></a>
 		  	<div class="nav-collapse collapse">
                 <ul class="nav pull-right">
-                    <li><a href="index.html#" class="scroller" data-section="#about">About</a></li>
+                    <li><a href="index.html#" class="scroller" data-section="#about">Our Offering</a></li>
+                    <li><a href="index.html#" class="scroller" data-section="#thespace">The Space</a></li>
                     <li><a href="index.html#" class="scroller" data-section="#companies">The Companies</a></li>
                     <li><a href="index.html#" class="scroller" data-section="#team">The Team</a></li>
                     <li><a href="index.html#" class="scroller" data-section="#contact">Contact us</a></li>
@@ -76,7 +77,7 @@
     
      <!-- #about -->
 	<div class="container-fluid" id="about">
-		<div class="container light">
+		<div class="container dark">
 			<h1>What do we offer</h1>
 		<ul class="thumbnails">
 		  <li class="span4">
@@ -105,6 +106,12 @@
 		</ul>
 	</div>
 </div>
+	<div class="container-fluid" id="thespace">
+		<div class="container dark">
+			<h1>Fresh &amp; Young Office Space</h1>
+			<p>Star Farm Ventures is a unique bla bla bla, provide you all the nessescary bla bla bla. </p>
+		</div>
+	</div>
      <!-- ends About -->
      <!-- #companies -->
 	<div class="container-fluid" id="companies" style="background: rgba(0,0,0,0.8);">
@@ -247,6 +254,10 @@
 		<div class="span4 pull-right">
 			<a class="twitter-timeline" href="https://twitter.com/StarFarmVenture" data-widget-id="323038649002369025">Tweets by @StarFarmVenture</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+		</div>
+		<div class="row-fluid dark span12" style="margin-top:60px;text-align:center;">
+			<h2>So, What are you waiting for?</h2>	<br/>
+			<a href="apply.html#" class="btn btn-xlarge btn-primary">Apply Now</a>
 		</div>
 
 	</div>
