--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		  <li class="span4">
 		    <div class="thumbnail">
 		      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/icon1.png">
-		      <h3>Funding</h3>
+		      <h3>Funding &amp; Office Space in NYC</h3>
 		      <p>Some cool thing about funding</p>
 		    </div>
 		  </li>
