--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
      <!-- #about -->
 	<div class="container-fluid" id="about">
 		<div class="container dark">
-			<h1>What do we offer</h1>
+			<h1>What do we offer?</h1>
 		<ul class="thumbnails">
 		  <li class="span4">
 		    <div class="thumbnail">
