--- a/index.html
+++ b/index.html
@@ -119,28 +119,48 @@
 			<ul class="thumbnails">
 			  <li class="span4">
 			    <div class="thumbnail">
-			      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/icon1.png">
-			      <h3>EQuala</h3>
+			      <a href="http://www.equala.fm"><img alt="" src="assets/img/equala.png"></a>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			    </div>
 			  </li>
 			
 			  <li class="span4">
 			    <div class="thumbnail">
-			      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/icon2.png">
-			      <h3>Askem</h3>
+			      <a href="http://www.askem.com"><img alt="" src="assets/img/askemlogo.png" width="200px"></a>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			    </div>
 			  </li>
 			  
 			  <li class="span4">
 			    <div class="thumbnail">
-			       <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/icon3.png">
-			      <h3>Swayy</h3>
+			      <a href="http://www.swayy.co"><img alt="" src="assets/img/swayy_logo.png" width="200px"></a>
 			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
 			    </div>
 			  </li>
 			</ul>
+
+			<ul class="thumbnails">
+			  <li class="span4">
+			    <div class="thumbnail">
+			      <a href="http://appmyday.co.il/en"><img alt="" src="assets/img/appmyday_logo.png"></a>
+			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
+			    </div>
+			  </li>
+			
+			  <li class="span4">
+			    <div class="thumbnail">
+			      <a href="www.licensario.com"><img alt="" src="assets/img/licensario_logo.png" width="200px"></a>
+			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
+			    </div>
+			  </li>
+			  
+			  <li class="span4">
+			    <div class="thumbnail">
+			      <a href="http://www.wisepricer.com"><img alt="" src="assets/img/wisepricer_logo.png" width="200px"></a>
+			      <p>Nulla facilisi. Duis aliquet egestas purus in blandit. Curabitur vulputate</p>
+			    </div>
+			  </li>
+			</ul>			
 		</div>
 	</div>
      <!-- ends companies -->         
