--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 		  	<div class="nav-collapse collapse">
                 <ul class="nav pull-right">
                     <li><a href="index.html#" class="scroller" data-section="#about">About Us</a></li>
-                    <li><a href="index.html#" class="scroller" data-section="#thespace">The Space</a></li>
                     <li><a href="index.html#" class="scroller" data-section="#companies">Portfolio</a></li>
+                    <li><a href="index.html#" class="scroller" data-section="#thespace">The Space</a></li>
                     <li><a href="index.html#" class="scroller" data-section="#team">The Team</a></li>
                     <li><a href="index.html#" class="scroller" data-section="#contact">Contact us</a></li>
                 </ul>
@@ -201,10 +201,8 @@
 			      <h3>Mr. Joey Low</h3>
                   <p>Founder</p>
 			      <div class="social">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/linkedin.png">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/twitter.png">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/facebook.png">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/email.png">
+                      <a target="_blank" href="http://www.linkedin.com/profile/view?id=34728184&locale=en_US&trk=tyah"><img alt="" src="assets/img/linkedin.png"/></a>
+                      <a target="_blank" href="mailto:joey@starfarmventures.com"><img alt="" src="assets/img/email.png"/></a>
 			      </div>
 			    </div>
 			  </li>
@@ -215,10 +213,9 @@
                     <h3>Tanya Low</h3>
                     <p>Co-Founder</p>
 			      <div class="social">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/linkedin.png">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/twitter.png">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/facebook.png">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/email.png">
+                      <a target="_blank" href="http://www.linkedin.com/profile/view?id=186125218&locale=en_US&trk=tyah"><img alt="" src="assets/img/linkedin.png"/></a>
+                      <a target="_blank" href="https://twitter.com/TheTLowww"><img alt="" src="assets/img/twitter.png"/></a>
+                      <a target="_blank" href="mailto:tanya@starfarmventures.com"><img alt="" src="assets/img/email.png"/></a>
 			      </div>
 			    </div>
 			  </li>
@@ -229,10 +226,8 @@
                     <h3>Rebecca Goldberg</h3>
 			        <p>Marketing</p>
 			      <div class="social">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/linkedin.png">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/twitter.png">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/facebook.png">
-				      <img alt="" src="http://wbpreview.com/previews/WB0L500N4/assets/img/email.png">
+                      <a target="_blank" href="http://www.linkedin.com/profile/view?id=182113776&locale=en_US&trk=tyah"><img alt="" src="assets/img/linkedin.png"/></a>
+                      <a target="_blank" href="mailto:rebecca@starfarmventures.com"><img alt="" src="assets/img/email.png"/></a>
 			      </div>
 			    </div>
 			  </li>
