--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       <!-- #contact -->   	
 	<div class="container-fluid" id="contact">
 		<div class="row-fluid dark span12" style="margin-top:30px;text-align:center;">
-			<h1>So, What are you waiting for?</h1>
+			<h1>So, what are you waiting for?</h1>
 		</div>
 
 	<div class="container dark span12">
@@ -249,7 +249,7 @@
 				<h2>Get in touch</h2>
 
 				<address>
-				  <strong>Star Farm Venture, Inc.</strong><br>
+				  <strong>Star Farm Ventures, Inc.</strong><br>
 				  19W 21th Street, Suite 402<br>
 				  New York, NY 10010<br>
 				  <abbr title="Phone">Phone:</abbr> (646) 670-0025
