--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
      <!-- #about -->
 	<div class="container-fluid" id="about">
         <div class="container dark">
-			<h1>What do we offer?</h1>
+			<h1><strong>What do we offer?</strong></h1>
             <ul class="thumbnails">
               <li class="span4" style="margin-top: 50px;">
                   <h1>Office Space</h1>
