--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
      <!-- #companies -->
 	<div class="container-fluid" id="companies">
 			<div class="container dark">
-				<h1>Meet The Companies</h1>
+				<h1><strong>Meet The Companies</strong></h1>
 			<ul class="thumbnails">
                 <li class="span4">
                     <div class="thumbnail">
@@ -185,15 +185,15 @@
      <!-- ends companies -->
         <div class="container-fluid" id="thespace">
             <div class="container dark">
-                <h1>SFV HQ</h1>
-                <h2>Located in the heart of Silicon Alley</h2>
+                <h1><strong>SFV HQ</strong></h1>
+                <h2>Located in the heart of Silicon Alley!</h2>
             </div>
         </div>
 
       <!-- #team -->    
 <div class="container-fluid" id="team">
 	<div class="container dark">
-		<h1>Meet the team</h1>
+		<h1><strong>Meet the team</strong></h1>
 			<ul class="thumbnails">
 			  <li class="span4">
 			    <div class="thumbnail">
@@ -240,7 +240,7 @@
       <!-- #contact -->   	
 	<div class="container-fluid" id="contact">
 		<div class="row-fluid dark span12" style="margin-top:30px;text-align:center;">
-			<h1>So, what are you waiting for?</h1>
+			<h1><strong>So, what are you waiting for?</strong></h1>
 		</div>
 
 	<div class="container dark span12">
