--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <ul class="nav pull-right">
                     <li><a href="index.html#" class="scroller" data-section="#about">About Us</a></li>
                     <li><a href="index.html#" class="scroller" data-section="#companies">Portfolio</a></li>
-                    <li><a href="index.html#" class="scroller" data-section="#thespace">The Space</a></li>
+                    <!--li><a href="index.html#" class="scroller" data-section="#thespace">The Space</a></li-->
                     <li><a href="index.html#" class="scroller" data-section="#team">The Team</a></li>
                     <li><a href="index.html#" class="scroller" data-section="#contact">Contact us</a></li>
                 </ul>
@@ -76,28 +76,28 @@
      <!-- #about -->
 	<div class="container-fluid" id="about">
         <div class="container dark">
-			<h1><strong>What do we offer?</strong></h1>
+			<h1><strong>What we offer</strong></h1>
             <ul class="thumbnails">
-              <li class="span4" style="margin-top: 50px;">
+              <li class="span4" style="margin-top: 0px;">
                   <h1>Office Space</h1>
               </li>
-              <li class="span4" style="margin-top: 150px;">
+              <li class="span4">
                   <h1>Funding</h1>
               </li>
-              <li class="span4"style="margin-top: 50px;">
+              <li class="span4">
                   <h1>Business Development</h1>
               </li>
             </ul>
             <ul class="thumbnails">
-                <li class="span4"  style="margin-top: 0px;">
+                <li class="span4" >
                     <h1>Marketing</h1>
                 </li>
 
-                <li class="span4" style="margin-top: 100px;">
+                <li class="span4">
                     <h1>Expansive Network</h1>
                 </li>
 
-                <li class="span4" style="margin-top: 0px;">
+                <li class="span4">
                     <h1>Mentorship</h1>
                 </li>
             </ul>
@@ -249,7 +249,7 @@
 				<h2>Get in touch</h2>
 
 				<address>
-				  <strong>Star Farm Ventures, Inc.</strong><br>
+				  <strong>Star Farm Ventures</strong><br>
 				  19W 21th Street, Suite 402<br>
 				  New York, NY 10010<br>
 				  <abbr title="Phone">Phone:</abbr> (646) 670-0025
