--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                       <i class="icon-circle icon-stack-base"></i>
                       <i class="icon-linkedin icon-dark"></i>
                   </a>
+                  <br/>
+                  <a style="line-height: 30px;" href="https://twitter.com/StarFarmVenture">@starfarmventures</a>
               </div>
           </div>
       </div>
