--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Doppio+One' rel='stylesheet' type='text/css'>
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <!-- IE Fix for HTML5 Tags -->
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -31,9 +31,9 @@
 
     <div class="container-fluid" id="header">
         <div class="row-fluid" style="width: 1024px;margin: auto;padding-top: 20px; padding-bottom: 10px;">
-            <div class="span2">PORTFOLIO</div>
+            <a class="span2" href="portfolio.html">PORTFOLIO</a>
             <div class="span2">THE TEAM</div>
-            <a class="span4" style="margin-top:-20px;" href="/"></a>
+            <a class="span4" style="margin-top:-20px;" href="index.html"></a>
             <div class="span2">CONTACT</div>
             <div class="span2">ABOUT</div>
         </div>
