--- a/portfolio.html
+++ b/portfolio.html
@@ -69,11 +69,10 @@
                         <div class="equala frame" style="width: 150px; margin-top: 160px; height: 25px;">
                         </div>
                         <div class="description">
-                            EQuala is a social radio application that lets users listen to their friends' music instantly. By following
-                            friends and adding them to the radio, users create a personalized radio station based on their favorite
-                            people and tunes. EQuala's algorithms analyze users’ true taste by monitoring their music activity.
-                            Through doing so, EQuala generates a personalized "Music DNA" that allows users to identify others
-                            with similar music taste, or "% match".
+                            EQuala is a social radio application that lets users listen to their friends' music instantly. By following friends and adding them to the radio, users create a personalized radio station based on their favorite people and tunes.
+                            <br/><br/>
+                            Feature.fm, an artist promotion platform, stemmed from EQuala's need to
+                            monetize. The service provides a new revenue stream for music apps facing similar monetization challenges. Featured songs replace audio ads, which minimize disturbance in the listening experience and provide artists with a new level of exposure.
                         </div>
                         <div class="equala frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
                         </div>
@@ -104,11 +103,8 @@
                         <div class="bizzabo2 frame" style="width: 150px; margin-top: 160px; height: 25px;">
                         </div>
                         <div class="description">
-                            Bizzabo helps professionals discover events and conferences, in addition to new and relevant business
-                            opportunities, through the use of complex algorithms. Additionally, Bizzabo provides easy event
-                            navigation with an agenda, messaging capabilities, and detailed (up to date) event information.
-                            By enabling event organizers to promote their event and engage directly with their attendees,
-                            Bizzabo ensures everyone makes the most out of every event.
+                            Bizzabo helps professionals discover events and conferences, in addition to new and relevant business opportunities, through the use of complex algorithms. Additionally, Bizzabo provides easy event navigation with an agenda, messaging capabilities, and detailed (up to date) event information.
+                            By enabling event organizers to promote their event and engage directly with their attendees, Bizzabo ensures everyone makes the most out of every event.
                         </div>
                         <div class="bizzabo2 frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
                         </div>
@@ -138,12 +134,8 @@
                         <div class="appmyday2 frame" style="width: 150px; margin-top: 160px; height: 25px;">
                         </div>
                         <div class="description">
-                            AppMyDay allows every guest to become a photographer, making every event an
-                            interactive celebration. After clicking on the event link or scanning the event bar
-                            code, guests join a private event stream where they can take photos and directly upload
-                            them to social networks. The photos are saved on the AppMyDay servers and are available to
-                            users for all purposes, eliminating the need to search for them on social media sites at the
-                            event’s completion.
+                            AppMyDay allows every guest to become a photographer, making every event an interactive celebration. After clicking on the event link or scanning the event bar
+                            code, guests join a private event stream where they can take photos and directly upload them to social networks. The photos are saved on the AppMyDay servers and are available to users for all purposes, eliminating the need to search for them on social media sites at the event's completion.
                         </div>
                         <div class="appmyday2 frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
                         </div>
@@ -159,6 +151,125 @@
                             <p>GUY ELDAR</p>
                             <p>RAN ANTEBI</p>
                             <p>OMER SHOHAM</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; WisePricer
+                        </div>
+                        <div class="overview wisepricer pull-right">
+                            Overview
+                        </div>
+                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            WisePricer is a full-featured pricing engine that monitors, analyzes and reprices retail products in real-time. With automated repricing and easy sync, the eCommerce tool enables online retailers to easily beat out their competition. WisePricer constantly scans and monitors thousands of online stores, so retailers can react to price changes as they happen.
+                        </div>
+                        <div class="greybg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>wisepricer.com</p>
+                        </div>
+
+                        <div class="wisepricer founders pull-right">
+                            <p class="founders_title">founders</p>
+                            <p>ARIE SHPANYA</p>
+                            <p>ROEY BRECHER</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; roomixer.
+                        </div>
+                        <div class="overview roomixer pull-right">
+                            Overview
+                        </div>
+                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            Roomixer offers new revenue stream for hotels, as it provides the opportunity to generate income fromreferrals by buying and selling TurnAways. As a seller, Roomixer allows you
+                            to generate additional revenue when your hotel is unable to approve a guest's reservation.
+                            As a buyer, Roomixer presents you with a new marketing channel, allowing you to fill empty rooms with real-time referrals, searching for an accommodation like yours.
+                        </div>
+                        <div class="greybg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>roomixer.com</p>
+                        </div>
+
+                        <div class="roomixer founders pull-right">
+                            <p class="founders_title">founders</p>
+                            <p>LIRAN ROSENFELD</p>
+                            <p>SALIC COGAN</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; swayy.
+                        </div>
+                        <div class="overview swayy pull-right">
+                            Overview
+                        </div>
+                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            Swayy is a content curation platform that helps small to medium businesses
+                            share content that engages their target audience across social networks. Swayy provides a Content Dashboard, Social Bar and Analytics tab, which allow users to select content, brand it, and analyze the effectiveness of the content strategy. Swayy continuously analyzes content across the web, extracting relevant topics and keywords to ensure the best output.
+                        </div>
+                        <div class="greybg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>swayy.co</p>
+                        </div>
+
+                        <div class="swayy founders pull-right">
+                            <p class="founders_title">founders</p>
+                            <p>OHAD FRANKFURT</p>
+                            <p>LIOR DEGANI</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; morpheus.
+                        </div>
+                        <div class="overview morpheus pull-right">
+                            Overview
+                        </div>
+                        <div class="whitebg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="whitebg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            Morpheus is a social platform of users and designer connected by objects of desire. Morpheus enables the recreation of a lost piece of, or the replication of an existing piece.
+                            By simply relying on a photo, a team of talented design professionals recreates, using cutting edge technology. With Morpheus, users can enjoy the services of a custom jeweler without leaving the internet.
+                        </div>
+                        <div class="whitebg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="whitebg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="whitebg url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>morphe.us.com</p>
+                        </div>
+
+                        <div class="morpheus founders pull-right">
+                            <p class="founders_title">founder</p>
+                            <p>TANYA DAMM BOKOBZA</p>
                         </div>
                     </li>
                 </ul>
