--- a/portfolio.html
+++ b/portfolio.html
@@ -272,6 +272,124 @@
                             <p>TANYA DAMM BOKOBZA</p>
                         </div>
                     </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; playgem.
+                        </div>
+                        <div class="overview playgem pull-right">
+                            Overview
+                        </div>
+                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            PlayGem is a social gaming platform that lets users play Backgammon with friends and with people from all over the world! Get free chips daily, compete, climb up the leader
+                            boards, and more! Gaming has never been more social or simple.
+                        </div>
+                        <div class="greybg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>playgem.co</p>
+                        </div>
+
+                        <div class="playgem founders pull-right">
+                            <p class="founders_title">founders</p>
+                            <p>DANIEL MESTER</p>
+                            <p>GIL TAL</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; doalbums.
+                        </div>
+                        <div class="overview blackbg pull-right">
+                            Overview
+                        </div>
+                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            DoAlbums is an innovative web platform for designing and sharing engaging stories using photos and movies. While current photo-sharing platforms are great for day-to-day photo sharing, they prove inadequate for sharing stories and experiences. DoAlbums allows users to turn their memories, stories, and photos into an engaging digital masterpiece that is easy and fun to create.
+                        </div>
+                        <div class="greybg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>doalbums.com</p>
+                        </div>
+
+                        <div class="blackbg founders pull-right">
+                            <p class="founders_title">founders</p>
+                            <p>EREZ RUSOVSKY</p>
+                            <p>EYAL KEREN</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; justad.
+                        </div>
+                        <div class="overview justad pull-right">
+                            Overview
+                        </div>
+                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            justAd is a cloud-based platform that enables the creation and display of interactive, rich and engaging ads. The platform does not require any coding and allows for the creation of ads that work on most platforms in the world. Execute your most creative ideas using a comprehensive set of designing tools and widgets, and receive the best performance results!
+                        </div>
+                        <div class="greybg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>justad.mobi</p>
+                        </div>
+
+                        <div class="justad founders pull-right">
+                            <p class="founders_title">founders</p>
+                            <p>YARIV EREL</p>
+                            <p>SHASHAR TALMI</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; licensario.
+                        </div>
+                        <div class="overview licensario pull-right">
+                            Overview
+                        </div>
+                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            Licensario helps SaaS businesses optimize their pricing plans, increase conversion rates and maximize revenues. Licensario's pricing algorithms, combined with users' behavior tracking and wrapped with payments infrastructure, give software companies the
+                            best and most flexible pricing tool there is.
+                        </div>
+                        <div class="greybg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>justad.mobi</p>
+                        </div>
+
+                        <div class="licensario founders pull-right">
+                            <p class="founders_title">founders</p>
+                            <p>GIL SADIS</p>
+                            <p>IGOR SHAPIRO</p>
+                        </div>
+                    </li>
                 </ul>
 			</div>
 		</div>
